--- a/jobs/jenkins-master/templates/bin/pre-start.erb
+++ b/jobs/jenkins-master/templates/bin/pre-start.erb
@@ -8,6 +8,7 @@ mkdir -p /var/vcap/store/jenkins-master/init.groovy.d
 mkdir -p /var/vcap/store/jenkins-master/plugins
 
 JENKINS_USE_GITHUB_AUTH="<%= p('jenkins.use_github_auth') %>"
+JENKINS_USE_GITHUB_REPOS="<%= p('jenkins.use_github_repos') %>"
 
 if [[ $(ls /var/vcap/jobs/jenkins-master/config/*.xml) ]]; then
     echo "Copying Config..."
@@ -26,6 +27,9 @@ if [ ${JENKINS_USE_GITHUB_AUTH} == "true" ]; then
         rm /var/vcap/store/jenkins-master/init.groovy.d/configure-access.groovy
     fi
     cp /var/vcap/jobs/jenkins-master/init.groovy.d/configure-github-access.groovy /var/vcap/store/jenkins-master/init.groovy.d/configure-github-access.groovy
+fi
+
+if [ ${JENKINS_USE_GITHUB_REPOS} == "true" ]; then
     cp /var/vcap/jobs/jenkins-master/init.groovy.d/configure-devsystems-creds.groovy /var/vcap/store/jenkins-master/init.groovy.d/configure-devsystems-creds.groovy
 fi
 
