--- a/jobs/jenkins-master/templates/bin/pre-start.erb
+++ b/jobs/jenkins-master/templates/bin/pre-start.erb
@@ -3,6 +3,8 @@
 set -e # exit immediately if a simple command exits with a non-zero status
 set -u # report the usage of uninitialized variables
 
+mkdir -p /var/vcap/tmp
+
 mkdir -p /var/vcap/store/jenkins-master
 mkdir -p /var/vcap/store/jenkins-master/init.groovy.d
 mkdir -p /var/vcap/store/jenkins-master/plugins
