--- a/jobs/jenkins-master/templates/bin/pre-start.erb
+++ b/jobs/jenkins-master/templates/bin/pre-start.erb
@@ -4,6 +4,8 @@ set -e # exit immediately if a simple command exits with a non-zero status
 set -u # report the usage of uninitialized variables
 
 mkdir -p /var/vcap/tmp
+chgrp vcap /var/vcap/tmp
+chmod g+w /var/vcap/tmp
 
 mkdir -p /var/vcap/store/jenkins-master
 mkdir -p /var/vcap/store/jenkins-master/init.groovy.d
