Updated how the tmp directory is configured

--- a/jobs/jenkins-master/templates/data/properties.sh.erb
+++ b/jobs/jenkins-master/templates/data/properties.sh.erb
@@ -21,4 +21,4 @@ export JENKINS=/var/vcap/packages/jenkins/jenkins/jenkins_${JENKINS_VERSION}.war
 export MEMORY_SETTINGS=""
 
 export JENKINS_HOME=/var/vcap/store/jenkins-master
-export JENKINS_ARGS="--sessionTimeout=1440 -Djava.io.tmpdir=$JENKINS_HOME/tmp"
+export JENKINS_ARGS="--sessionTimeout=1440"
