--- a/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
+++ b/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
@@ -2,39 +2,42 @@
 <scriptApproval plugin="script-security@1.15">
   <approvedScriptHashes/>
   <approvedSignatures>
-    <string>method groovy.lang.GroovyObject getProperty java.lang.String</string>
-    <string>method groovy.text.Template make java.util.Map</string>
-    <string>method groovy.text.TemplateEngine createTemplate java.lang.String</string>
-    <string>method groovy.util.XmlSlurper parseText java.lang.String</string>
-    <string>method groovy.util.slurpersupport.GPathResult getAt int</string>
-    <string>method groovy.util.slurpersupport.GPathResult text</string>
-    <string>method groovy.util.slurpersupport.GPathResult find groovy.lang.Closure</string>
-    <string>method java.lang.String concat java.lang.String</string>
-    <string>method java.lang.Throwable printStackTrace</string>
-    <string>method java.text.Format format java.lang.Object</string>
-    <string>method java.util.Properties getProperty java.lang.String</string>
-    <string>method java.util.Properties getProperty java.lang.String java.lang.String</string>
-    <string>method java.util.Properties load java.io.Reader</string>
-    <string>method java.util.Properties setProperty java.lang.String java.lang.String</string>
-    <string>new groovy.text.SimpleTemplateEngine</string>
-    <string>new groovy.util.XmlSlurper</string>
-    <string>new java.io.StringReader java.lang.String</string>
-    <string>new java.lang.StringBuilder</string>
-    <string>new java.text.SimpleDateFormat java.lang.String</string>
-    <string>new java.util.Date</string>
-    <string>new java.util.HashMap java.util.Map</string>
-    <string>new java.util.Properties</string>
-    <string>staticMethod groovy.json.JsonOutput toJson java.util.Map</string>
-    <string>staticMethod java.util.TimeZone getTimeZone java.lang.String</string>
-    <string>staticMethod java.util.TimeZone setDefault java.util.TimeZone</string>
-    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods capitalize java.lang.String</string>
-    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods drop java.lang.CharSequence int</string>
-    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods findAll java.util.Map groovy.lang.Closure</string>
-    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods findIndexOf java.lang.Object groovy.lang.Closure</string>
-    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods getText java.net.URL</string>
-    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods leftShift java.lang.StringBuilder</string>
-    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods leftShift java.lang.StringBuilder java.lang.Object</string>
-    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods toBoolean java.lang.String</string>
+    <string>method groovy.lang.GroovyObject getProperty java.lang.String</script>
+    <string>method groovy.text.Template make java.util.Map</script>
+    <string>method groovy.text.TemplateEngine createTemplate java.lang.String</script>
+    <string>method groovy.util.XmlSlurper parseText java.lang.String</script>
+    <string>method groovy.util.slurpersupport.GPathResult find groovy.lang.Closure</script>
+    <string>method groovy.util.slurpersupport.GPathResult getAt int</script>
+    <string>method groovy.util.slurpersupport.GPathResult text</script>
+    <string>method java.lang.String concat java.lang.String</script>
+    <string>method java.lang.Throwable printStackTrace</script>
+    <string>method java.net.URL openConnection</script>
+    <string>method java.net.URLConnection getContent</script>
+    <string>method java.net.URLConnection setRequestProperty java.lang.String java.lang.String</script>
+    <string>method java.text.Format format java.lang.Object</script>
+    <string>method java.util.Properties getProperty java.lang.String</script>
+    <string>method java.util.Properties getProperty java.lang.String java.lang.String</script>
+    <string>method java.util.Properties load java.io.Reader</script>
+    <string>method java.util.Properties setProperty java.lang.String java.lang.String</script>
+    <string>new groovy.text.SimpleTemplateEngine</script>
+    <string>new groovy.util.XmlSlurper</script>
+    <string>new java.io.StringReader java.lang.String</script>
+    <string>new java.lang.StringBuilder</script>
+    <string>new java.text.SimpleDateFormat java.lang.String</script>
+    <string>new java.util.Date</script>
+    <string>new java.util.HashMap java.util.Map</script>
+    <string>new java.util.Properties</script>
+    <string>staticMethod groovy.json.JsonOutput toJson java.util.Map</script>
+    <string>staticMethod java.util.TimeZone getTimeZone java.lang.String</script>
+    <string>staticMethod java.util.TimeZone setDefault java.util.TimeZone</script>
+    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods capitalize java.lang.String</script>
+    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods drop java.lang.CharSequence int</script>
+    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods findAll java.util.Map groovy.lang.Closure</script>
+    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods findIndexOf java.lang.Object groovy.lang.Closure</script>
+    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods getText java.net.URL</script>
+    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods leftShift java.lang.StringBuilder</script>
+    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods leftShift java.lang.StringBuilder java.lang.Object</script>
+    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods toBoolean java.lang.String</script>
   </approvedSignatures>
   <aclApprovedSignatures/>
   <approvedClasspathEntries/>
