--- a/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
+++ b/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
@@ -10,6 +10,7 @@
     <string>method groovy.util.slurpersupport.GPathResult getAt int</script>
     <string>method groovy.util.slurpersupport.GPathResult text</script>
     <string>method java.lang.String concat java.lang.String</script>
+    <string>method java.lang.String getBytes</string>
     <string>method java.lang.Throwable printStackTrace</script>
     <string>method java.net.URL openConnection</script>
     <string>method java.net.URLConnection getContent</script>
