--- a/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
+++ b/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
@@ -39,6 +39,7 @@
     <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods leftShift java.lang.StringBuilder</script>
     <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods leftShift java.lang.StringBuilder java.lang.Object</script>
     <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods toBoolean java.lang.String</script>
+    <string>staticMethod org.codehaus.groovy.runtime.EncodingGroovyMethods encodeBase64 byte[]</string>
   </approvedSignatures>
   <aclApprovedSignatures/>
   <approvedClasspathEntries/>
