Update scriptApproval.xml.erb (#65)
* Update scriptApproval.xml.erb

* Update scriptApproval.xml.erb

* Add staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods getText java.io.InputStream

--- a/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
+++ b/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
@@ -10,6 +10,7 @@
     <string>method groovy.util.slurpersupport.GPathResult getAt int</script>
     <string>method groovy.util.slurpersupport.GPathResult text</script>
     <string>method java.lang.String concat java.lang.String</script>
+    <string>method java.lang.String getBytes</string>
     <string>method java.lang.Throwable printStackTrace</script>
     <string>method java.net.URL openConnection</script>
     <string>method java.net.URLConnection getContent</script>
@@ -34,10 +35,12 @@
     <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods drop java.lang.CharSequence int</script>
     <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods findAll java.util.Map groovy.lang.Closure</script>
     <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods findIndexOf java.lang.Object groovy.lang.Closure</script>
+    <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods getText java.io.InputStream</string>
     <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods getText java.net.URL</script>
     <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods leftShift java.lang.StringBuilder</script>
     <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods leftShift java.lang.StringBuilder java.lang.Object</script>
     <string>staticMethod org.codehaus.groovy.runtime.DefaultGroovyMethods toBoolean java.lang.String</script>
+    <string>staticMethod org.codehaus.groovy.runtime.EncodingGroovyMethods encodeBase64 byte[]</string>
   </approvedSignatures>
   <aclApprovedSignatures/>
   <approvedClasspathEntries/>
