Allow use of different cred types

--- a/jobs/jenkins-master/templates/config/configure-credentials.groovy.erb
+++ b/jobs/jenkins-master/templates/config/configure-credentials.groovy.erb
@@ -7,6 +7,7 @@ import com.cloudbees.jenkins.plugins.sshcredentials.impl.BasicSSHUserPrivateKey.
 import com.cloudbees.plugins.credentials.impl.UsernamePasswordCredentialsImpl
 import org.jenkinsci.plugins.plaincredentials.*
 import org.jenkinsci.plugins.plaincredentials.impl.StringCredentialsImpl
+import hudson.plugins.blazemeter.BlazemeterCredentialsBAImpl
 import hudson.util.Secret
 import org.yaml.snakeyaml.*
 
@@ -20,12 +21,46 @@ println "Credentials Store - ${credentials_store}"
 def jenkins_credentials = yaml.load("""<%= p('jenkins.credentials') %>""")
 jenkins_credentials.each { creds ->
   domain = Domain.global()
-  credentials = new UsernamePasswordCredentialsImpl(
-    CredentialsScope.GLOBAL,
-    "${creds.id}",
-    "${creds.description}",
-    "${creds.username}",
-    "${creds.password}")
+
+  switch (creds.type) {
+    case "UsernamePasswordCredentialImpl":
+         credentials = new UsernamePasswordCredentialsImpl(
+           CredentialsScope.GLOBAL,
+           "${creds.id}",
+           "${creds.description}",
+           "${creds.username}",
+           "${creds.password}")
+         break
+    case "BlazemeterCredentialsBAImpl":
+         credentials = new BlazemeterCredentialsBAImpl(
+           CredentialsScope.GLOBAL,
+           "${creds.id}",
+           "${creds.description}",
+           "${creds.username}",
+           "${creds.password}")
+         break
+    case "DirectEntryPrivateKeySource":
+         credentials = new BasicSSHUserPrivateKey(
+           CredentialsScope.GLOBAL,
+           "${creds.id}",
+           "${creds.username}",
+	   new BasicSSHUserPrivateKey.DirectEntryPrivateKeySource("${creds.private_key_file}"),
+           "${creds.passphrase}",
+           "${creds.description}")
+         break
+    case "UsersPrivateKeySource":
+         credentials = new BasicSSHUserPrivateKey(
+           CredentialsScope.GLOBAL,
+           "${creds.id}",
+           "${creds.username}",
+	   new BasicSSHUserPrivateKey.UsersPrivateKeySource(),
+           "${creds.passphrase}",
+           "${creds.description}")
+         break
+    default:
+      println "Unknown creds type"
+      return
+  }
 
   credentials_store.addCredentials(domain, credentials)
   println "Added ${creds.id} credentials"
