Add Slack plugin

--- a/jobs/jenkins-master/templates/config/configure-credentials.groovy.erb
+++ b/jobs/jenkins-master/templates/config/configure-credentials.groovy.erb
@@ -48,6 +48,13 @@ jenkins_credentials.each { creds ->
            "${creds.passphrase}",
            "${creds.description}")
          break
+    case "StringCredentialsImpl":
+         credentials = new StringCredentialsImpl(
+           CredentialsScope.GLOBAL,
+           "${creds.id}",
+           "${creds.description}",
+           new Secret("${creds.secret}"))
+         break
     case "UsersPrivateKeySource":
          credentials = new BasicSSHUserPrivateKey(
            CredentialsScope.GLOBAL,
