Amended sonar property names

--- a/jobs/jenkins-master/templates/config/configure-sonar.groovy.erb
+++ b/jobs/jenkins-master/templates/config/configure-sonar.groovy.erb
@@ -18,8 +18,8 @@ def sonarInstallation = new SonarInstallation(
   "", // mojoVersion, 
   "", // additionalProperties, 
   new TriggersConfig(), // triggers,
-  '<%= p('sonar.username') %>', // sonarLogin, 
-  '<%= p('sonar.password') %>', // sonarPassword, 
+  '<%= p('sonar.jenkins.username') %>', // sonarLogin,
+  '<%= p('sonar.jenkins.password') %>', // sonarPassword,
   "" // additionalAnalysisProperties
 )
 
