--- a/jobs/jenkins-master/templates/config/jenkins.model.JenkinsLocationConfiguration.xml.erb
+++ b/jobs/jenkins-master/templates/config/jenkins.model.JenkinsLocationConfiguration.xml.erb
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <jenkins.model.JenkinsLocationConfiguration>
   <adminAddress><%= p('jenkins.admin.email') %></adminAddress>
-  <jenkinsUrl><%= p('jenkins.server.address') %></jenkinsUrl>
+  <jenkinsUrl><%= p('jenkins.server.url') %></jenkinsUrl>
 </jenkins.model.JenkinsLocationConfiguration>
