fix missing character

--- a/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
+++ b/jobs/jenkins-master/templates/config/scriptApproval.xml.erb
@@ -23,7 +23,7 @@
     <string>new groovy.text.SimpleTemplateEngine</string>
     <string>new java.lang.Exception java.lang.String</string>
     <string>new java.io.PrintWriter java.io.Writer</string>
-    <string>java.lang.Throwable printStackTrace java.io.PrintWriter/string>
+    <string>java.lang.Throwable printStackTrace java.io.PrintWriter</string>
     <string>new groovy.util.XmlSlurper</string>
     <string>new java.io.StringReader java.lang.String</string>
     <string>new java.lang.StringBuilder</string>
