--- a/jobs/jenkins-master/templates/bin/drain.erb
+++ b/jobs/jenkins-master/templates/bin/drain.erb
@@ -66,7 +66,7 @@ echo "$(date -Ins): Checking ${pid} with BOSH_JOB_STATE: ${BOSH_JOB_STATE} and B
 
 if ! ps -p "${pid}" >/dev/null; then echo 0; exit 0; fi
 
-# TODO Process is running, so send signal to instruct the process to gracefully shutdown Jenkins.
+# Process is running, so send signal to instruct the process to gracefully shutdown Jenkins.
 echo "$(date -Ins): Draining ${pid} with BOSH_JOB_STATE: ${BOSH_JOB_STATE} and BOSH_JOB_NEXT_STATE: ${BOSH_JOB_NEXT_STATE}"
 
 CRUMB=$(curl --silent --user ${USERNAME}:${PASSWORD} ${JENKINS_URL}${CRUMB_PATH})
