--- a/jobs/jenkins-master/templates/bin/drain.erb
+++ b/jobs/jenkins-master/templates/bin/drain.erb
@@ -6,10 +6,10 @@ if [ "<%= p('toggle.jenkins.drain') %>" = "false" ]; then echo 0; exit 0; fi
 
 JENKINS_URL=http://<%= spec.ip %>:<%= p('jenkins.server.port') %>
 JENKINS_USE_GITHUB_AUTH="<%= p('jenkins.use_github_auth') %>"
-USERNAME=<%= p('jenkins.github.integration_user') %>
+USERNAME=<%= p('jenkins.github.integration_user.name') %>
 TOKEN=<%= p('jenkins.github.integration_user.access_token') %>
 
-if [ ${JENKINS_USE_GITHUB_AUTH} == "false" ]; then
+if [ ${JENKINS_USE_GITHUB_AUTH} = "false" ]; then
   USERNAME=administrator
   TOKEN=<%= p('jenkins.admin.password') %>
 fi
