--- a/jobs/jenkins-master/templates/config/configure-github-integration-creds.groovy.erb
+++ b/jobs/jenkins-master/templates/config/configure-github-integration-creds.groovy.erb
@@ -13,7 +13,7 @@ final String SYSTEM_CREDENTIALS_PROVIDER_CLASSPATH = 'com.cloudbees.plugins.cred
 final String GHE_SSH_KEY = '''<%= p('jenkins.github.integration_user.ssh') %>'''
 final String GHE_DOMAIN_NAME = '''<%= p('jenkins.github.oauth.url.web') %>'''.replace('https://', '')
 final String GHE_ACCESS_TOKEN = '''<%= p('jenkins.github.integration_user.access_token') %>'''
-final String GHE_INTEGRATION_USER = '''<%= p('jenkins.github.integration_user') %>'''
+final String GHE_INTEGRATION_USER = '''<%= p('jenkins.github.integration_user.name') %>'''
 
 globalDomain = Domain.global()
 credentialsStore = Jenkins.instance.getExtensionList(SYSTEM_CREDENTIALS_PROVIDER_CLASSPATH)[0].getStore()
@@ -34,7 +34,7 @@ if (GHE_SSH_KEY.allWhitespace) {
 }
 
 // Add username/password credentials to Global Domain
-globalUnPwCredentials = new UsernamePasswordCredentialsImpl(CredentialsScope.GLOBAL, GHE_INTEGRATION_USER + '-global-domain-credential', '' , '<%= p('jenkins.github.integration_user') %>', GHE_ACCESS_TOKEN)
+globalUnPwCredentials = new UsernamePasswordCredentialsImpl(CredentialsScope.GLOBAL, GHE_INTEGRATION_USER + '-global-domain-credential', '' , '<%= p('jenkins.github.integration_user.name') %>', GHE_ACCESS_TOKEN)
 credentialsStore.addCredentials(Domain.global(), globalUnPwCredentials)
 
 // Add text secret credentials to Global Domain
@@ -46,7 +46,7 @@ gheDomain = new Domain(GHE_DOMAIN_NAME, null, Collections.emptyList())
 credentialsStore.addDomain(gheDomain, Collections.emptyList())
 
 /// Add username/password credentials to GHE domain
-domainUnPwCredentials = new UsernamePasswordCredentialsImpl(CredentialsScope.GLOBAL, GHE_INTEGRATION_USER + '-github-domain-credential', '', '<%= p('jenkins.github.integration_user') %>', Secret.fromString(GHE_ACCESS_TOKEN))
+domainUnPwCredentials = new UsernamePasswordCredentialsImpl(CredentialsScope.GLOBAL, GHE_INTEGRATION_USER + '-github-domain-credential', '', '<%= p('jenkins.github.integration_user.name') %>', Secret.fromString(GHE_ACCESS_TOKEN))
 credentialsStore.addCredentials(gheDomain, domainUnPwCredentials)
 
 // Add text secret credentials to GHE Domain
