--- a/jobs/jenkins-slave/templates/bin/drain.erb
+++ b/jobs/jenkins-slave/templates/bin/drain.erb
@@ -11,7 +11,7 @@ PASSWORD=<%= link('jenkins_master').p('jenkins.admin.password') %>
 
 JOB_NAME=jenkins-slave
 SLEEP_INTERVAL_IN_SECONDS=5
-TIMEOUT_IN_SECONDS=600
+TIMEOUT_IN_SECONDS=<%= p('drain.timeout') %>
 CRUMB_PATH='/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'
 BUILDS_PATH="/api/xml?&tree=jobs[builds[*]]&xpath=/hudson/job/build[starts-with(@builtOn,<%= p('jenkins.slave.type') %>-<%= spec.id %>)%20and%20building=%22true%22]&wrapper=builds"
 NODE_NAME_PATH="/computer/api/xml?xpath=/computerSet/computer[starts-with(displayName,%27build%27)]/displayName"
