--- a/jobs/jenkins-slave/templates/bin/drain.erb
+++ b/jobs/jenkins-slave/templates/bin/drain.erb
@@ -20,7 +20,7 @@ JOB_NAME=jenkins-slave
 SLEEP_INTERVAL_IN_SECONDS=5
 TIMEOUT_IN_SECONDS=<%= p('drain.timeout') %>
 CRUMB_PATH='/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'
-BUILDS_PATH="/api/xml?&tree=jobs[builds[*]]&xpath=/hudson/job/build[starts-with(@builtOn,<%= p('jenkins.slave.type') %>-<%= spec.id %>)%20and%20building=%22true%22]&wrapper=builds"
+BUILDS_PATH="/api/xml?&tree=jobs[builds[*]]&xpath=/hudson/job/build[contains(.,%27<%= p('jenkins.slave.type') %>-<%= spec.id %>%27)%20and%20building=%22true%22]&wrapper=builds"
 NODE_NAME_PATH="/computer/api/xml?xpath=/computerSet/computer[starts-with(displayName,%27build%27)]/displayName"
 
 CRUMB=$(curl --silent --user ${USERNAME}:${TOKEN} ${JENKINS_URL}${CRUMB_PATH})
