Fix typo in creds logic

--- a/jobs/jenkins-master/templates/config/configure-credentials.groovy.erb
+++ b/jobs/jenkins-master/templates/config/configure-credentials.groovy.erb
@@ -68,7 +68,7 @@ jenkins_credentials.each { creds ->
       println "Unknown creds type - ${creds.type}"
   }
 
-  if (binding.hasVariable("credentials") {
+  if (binding.hasVariable("credentials")) {
       credentials_store.addCredentials(domain, credentials)
       println "Added ${creds.id} credentials"
   }
